도네이미지 변경 / 하단 답장기능 버그 수정

--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -117,6 +117,7 @@ body {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  opacity: 0;
 }
 
 .bottom-object span {
