세로이미지 변경 / 가상광고 이미지 변경 / 하단메시지 숨김기능 수정

--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -190,8 +190,9 @@ body {
 }
 
 .bottom-admin {
+  font-family: 'JALNAN';
   z-index: 3;
-  color: yellow;
+  color: #27b9ac;
   font-size: 23px;
 }
 
@@ -199,77 +200,8 @@ body {
   padding-left: 3%;
   display: inline-block;
   white-space: nowrap;
-  /* -webkit-animation-name: marquee;
-  -webkit-animation-timing-function: linear;
-  -webkit-animation-duration: 10s;
-  -webkit-animation-iteration-count: infinite;
-  -moz-animation-name: marquee;
-  -moz-animation-timing-function: linear;
-  -moz-animation-duration: 10s;
-  -moz-animation-iteration-count: infinite;
-  -ms-animation-name: marquee;
-  -ms-animation-timing-function: linear;
-  -ms-animation-duration: 10s;
-  -ms-animation-iteration-count: infinite;
-  -o-animation-name: marquee;
-  -o-animation-timing-function: linear;
-  -o-animation-duration: 10s;
-  -o-animation-iteration-count: infinite;
-  animation-name: marquee;
-  animation-timing-function: linear;
-  animation-duration: 10s;
-  animation-iteration-count: infinite; */
 }
 
-@-webkit-keyframes marquee {
-  from {
-    -webkit-transform: translate(0%);
-  }
-  99%,
-  to {
-    -webkit-transform: translate(-100%);
-  }
-}
-
-@-moz-keyframes marquee {
-  from {
-    -moz-transform: translate(0%);
-  }
-  99%,
-  to {
-    -moz-transform: translate(-100%);
-  }
-}
-
-@-ms-keyframes marquee {
-  from {
-    -ms-transform: translate(0%);
-  }
-  99%,
-  to {
-    -ms-transform: translate(-100%);
-  }
-}
-
-@-o-keyframes marquee {
-  from {
-    -o-transform: translate(0%);
-  }
-  99%,
-  to {
-    -o-transform: translate(-100%);
-  }
-}
-
-@keyframes marquee {
-  from {
-    transform: translate(0%);
-  }
-  99%,
-  to {
-    transform: translate(-100%);
-  }
-}
 /* 좌측 영역 */
 .left-section {
   float: left;
