--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -144,7 +144,7 @@ body {
   margin-right: 8%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   font-family: 'DIGITAL';
   font-size: 30px;
