--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -4,6 +4,8 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+  <script src="/live-commerce/node_modules/jquery/ex"></script>
   <script src='/lib/bundle.js'></script>
   <link href='/public/layout.css' rel='stylesheet'>
 
@@ -29,6 +31,15 @@
         <img src="/public/images/vertical-banner-1.png" class="vertical-banner" alt="세로배너영역"/>
       </div>
     </div>
+
+    <!-- 룰렛 -->
+    <div class="roullette-area">
+      <div class="roullette-container">	
+        <div class="board-start"></div>
+        <div class="board-on customerId"></div>         
+      </div>
+    </div>
+
     <!--우측상단 응원메세지-->
     <div class="top-right-logo">
       <img src="/public/images/onadLogo.png" id="onad-logo" alt="온애드로고" />
