--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -5,7 +5,7 @@
   <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
-  <script src="/live-commerce/node_modules/jquery/ex"></script>
+  <script src="/node_modules/jquery-slotmachine/dist/slotmachine.min.js"></script>
   <script src='/lib/bundle.js'></script>
   <link href='/public/layout.css' rel='stylesheet'>
 
