--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -144,7 +144,7 @@ body {
   margin-right: 8%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   font-family: 'DIGITAL';
   font-size: 30px;
@@ -381,6 +381,22 @@ body {
 }
 
 .virtual-ad img {
+  width: 100%;
+  height: 100%;
+}
+
+.virtual-ad-full {
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 13;
+}
+
+.virtual-ad-full img {
+  background-color: #ffffff;
   width: 100%;
   height: 100%;
 }
