--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <!-- 룰렛 -->
+    <!-- 전체화면 가상광고 -->
     <div class="virtual-ad-full">
       <img id="virtual-ad-img-full" src="/public/images/invisible.png" />
     </div>
