0904 방송 대비 이미지 업데이트

--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -32,9 +32,9 @@
     </div>
 
     <!-- 전체화면 가상광고 -->
-    <div class="virtual-ad-full">
+    <!-- <div class="virtual-ad-full">
       <img id="virtual-ad-img-full" src="/public/images/invisible.png" />
-    </div>
+    </div> -->
 
     <!--우측상단 응원메세지-->
     <div class="top-right-logo">
@@ -43,9 +43,9 @@
     <div class="top-right">
     </div>
     <!--가상광고 영역-->
-    <div class="virtual-ad">
+    <!-- <div class="virtual-ad">
       <img id="virtual-ad-img" src="/public/images/invisible.png" />
-    </div>
+    </div> -->
     <!--하단 영역-->
     <div class="bottom-area-wrapper">
       <div class="bottom-area-left">
