--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -30,7 +30,10 @@
         <img src="/public/images/vertical-banner-1.png" class="vertical-banner" alt="세로배너영역"/>
       </div>
     </div>
-
+    <!-- 최상단 비회원 구매 메세지 -->
+    <div class="top-wrapper" style="top:0px;width:1080px;display:none;align-items: center;justify-content: center; -webkit-text-stroke: 1.5px rgb(46, 45, 45);
+    font-family: 'KOTRA';">
+    </div>
     <!-- 전체화면 가상광고 -->
     <!-- <div class="virtual-ad-full">
       <img id="virtual-ad-img-full" src="/public/images/invisible.png" />
@@ -42,10 +45,7 @@
     </div>
     <div class="top-right">
     </div>
-    <!--가상광고 영역-->
-    <!-- <div class="virtual-ad">
-      <img id="virtual-ad-img" src="/public/images/invisible.png" />
-    </div> -->
+
     <!--하단 영역-->
     <div class="bottom-area-wrapper">
       <div class="bottom-area-left">
