인트로 아웃트로 구현 / 비회원 메세지 금액 표기 변경

--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -31,13 +31,11 @@
       </div>
     </div>
     <!-- 최상단 비회원 구매 메세지 -->
-    <div class="top-wrapper" style="top:0px;width:1080px;display:none;align-items: center;justify-content: center; -webkit-text-stroke: 1.5px rgb(46, 45, 45);
-    font-family: 'KOTRA';">
+    <div class="top-wrapper">
     </div>
-    <!-- 전체화면 가상광고 -->
-    <!-- <div class="virtual-ad-full">
-      <img id="virtual-ad-img-full" src="/public/images/invisible.png" />
-    </div> -->
+    <!-- 전체화면 인트로-->
+    <div class="full-video">
+    </div>
 
     <!--우측상단 응원메세지-->
     <div class="top-right-logo">
