--- a/live-commerce/views/client.ejs
+++ b/live-commerce/views/client.ejs
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+  <div class="full-video">
+  </div>
   <div class="live-commerce">
     <div class="left-section">
       <!--랭킹-->
@@ -34,8 +36,8 @@
     <div class="top-wrapper">
     </div>
     <!-- 전체화면 인트로-->
-    <div class="full-video">
-    </div>
+    <!-- <div class="full-video">
+    </div> -->
 
     <!--우측상단 응원메세지-->
     <div class="top-right-logo">
