--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -28,6 +28,15 @@ body {
   justify-content: flex-end;
 }
 
+.on-air {
+  background-color: green;
+  bottom: 0;
+  left: 0;
+  width: 10px;
+  height: 10px;
+  position: fixed;
+}
+
 .live-commerce{
   display:none;
   width: 96.9%;
