이미지 변경 / 중간 금액 알림 기능

--- a/live-commerce/public/layout.css
+++ b/live-commerce/public/layout.css
@@ -194,6 +194,7 @@ body {
   flex-direction: row;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
 }
 
 .bottom-area-right p:after {
